--- a/x360ce.App.Beta/MainBodyControl.xaml
+++ b/x360ce.App.Beta/MainBodyControl.xaml
@@ -72,11 +72,7 @@
             <local:CloudControl x:Name="CloudPanel" />
         </TabItem>
         <TabItem Name="HelpTabPage" Header="Help">
-            <RichTextBox
-                x:Name="HelpRichTextBox"
-                Padding="3,6,3,6"
-                BorderThickness="0"
-                VerticalScrollBarVisibility="Auto">
+            <RichTextBox x:Name="HelpRichTextBox">
                 <RichTextBox.OpacityMask>
                     <VisualBrush>
                         <VisualBrush.Visual>
