--- a/x360ce.App.Beta/MainWindow.xaml
+++ b/x360ce.App.Beta/MainWindow.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:x360ce.App"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    MinWidth="900"
+    MinHeight="900"  
     Width="900"
     Height="900"
     Background="{StaticResource BackgroundLight}"
